<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Qinghe弱网</string>
    <string name="action_about">更多信息</string>
    <string name="title_config_add">新增配置</string>
    <string name="title_config_edit">编辑配置</string>
    <string name="hint_config_name">配置名称</string>
    <string name="label_up_delay">上行延时(ms)</string>
    <string name="label_up_jitter">上行延时抖动(ms)</string>
    <string name="label_up_bandwidth">上行带宽(kbps)</string>
    <string name="label_up_packet_loss">上行随机丢包(%)</string>
    <string name="label_up_continuous_loss_pass">上行连续丢包放行时长(ms)</string>
    <string name="label_up_continuous_loss_drop">上行连续丢包丢包时长(ms)</string>
    <string name="label_down_delay">下行延时(ms)</string>
    <string name="label_down_jitter">下行延时抖动(ms)</string>
    <string name="label_down_bandwidth">下行带宽(kbps)</string>
    <string name="label_down_packet_loss">下行随机丢包(%)</string>
    <string name="label_down_continuous_loss_pass">下行连续丢包放行时长(ms)</string>
    <string name="label_down_continuous_loss_drop">下行连续丢包丢包时长(ms)</string>
    <string name="label_protocol">弱网控制协议</string>
    <string name="protocol_tcp">TCP</string>
    <string name="protocol_udp">UDP</string>
    <string name="protocol_all">全部协议</string>
    <string name="btn_save">保存</string>
    <string name="btn_start">启动</string>
    <string name="btn_stop">停止</string>
    <string name="btn_add_config">新增配置</string>
    <string name="btn_select_app">选择应用</string>
    <string name="no_config">暂无配置</string>
    <string name="no_app_selected">未选择应用(全局生效)</string>
    <string name="about_title">关于</string>
    <string name="about_app_name">Qinghe弱网</string>
    <string name="about_version">版本：v1.0</string>
    <string name="about_author">作者：Qinghe</string>
    <string name="about_free">本软件永久免费开源</string>
    <string name="about_github">GitHub：Qinghe-Team/NetTest</string>
    <string name="about_qq">作者QQ：3686072365</string>
    <string name="vpn_notification_title">Qinghe弱网测试</string>
    <string name="vpn_notification_content">弱网模拟服务运行中</string>
    <string name="selected_app">已选应用：%s</string>
    <string name="config_delete_confirm">确定删除此配置？</string>
    <string name="floating_window_permission">需要悬浮窗权限</string>
    <string name="floating_toggle">切换服务</string>
    <string name="floating_refresh">刷新配置</string>
    <string name="floating_expand">展开或收起</string>
</resources>
